--- a/Areas/Admin/Views/TongHopSoLieuDKXTs/TheoDoiNopHoSo.cshtml
+++ b/Areas/Admin/Views/TongHopSoLieuDKXTs/TheoDoiNopHoSo.cshtml
@@ -251,19 +251,19 @@
                                                     @{
                                                         if (item.TrangThaiLP == "0")
                                                         {
-                                                            <span>Chưa nộp LP</span>
+                                                            <span style="color: red">Chưa nộp LP</span>
                                                         }
                                                         if (item.TrangThaiLP == "1")
                                                         {
-                                                            <span>Đã nộp, chưa KT</span>
+                                                            <span style="color: red">Đã nộp, chưa KT</span>
                                                         }
                                                         if (item.TrangThaiLP == "2")
                                                         {
-                                                            <span>Đã KT, Có sai sót</span>
+                                                            <span style="color:blue" >Đã KT, Có sai sót</span>
                                                         }
                                                         if (item.TrangThaiLP == "3")
                                                         {
-                                                            <span>Đã sửa, chưa KT</span>
+                                                            <span style="color:red">Đã sửa, chưa KT</span>
                                                         }
                                                         if (item.TrangThaiLP == "9")
                                                         {
@@ -276,15 +276,15 @@
                                                     @{
                                                         if (item.TrangThai_HoSo == "0")
                                                         {
-                                                            <span>Đã nộp, chưa KT</span>
+                                                            <span style="color: red">Đã nộp, chưa KT</span>
                                                         }
                                                         if (item.TrangThai_HoSo == "1")
                                                         {
-                                                            <span>Đã KT, Có sai sót</span>
+                                                            <span style="color: blue">Đã KT, Có sai sót</span>
                                                         }
                                                         if (item.TrangThai_HoSo == "2")
                                                         {
-                                                            <span>Đã sửa, chưa KT</span>
+                                                            <span style="color: red">Đã sửa, chưa KT</span>
                                                         }
                                                         if (item.TrangThai_HoSo == "9")
                                                         {
